--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>yoyo-gameplay</title></head>
 <body>
 <script type="text/javascript" src="phaser.js"></script>
+<script type="text/javascript" src="Scene.js"></script>
 <script type="text/javascript" src="Main.js"></script>
 </body>
 </html>
