--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+
 <head>
-    <title>yoyo-gameplay</title></head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <title>Platformer</title>
+  <style>
+    html,
+    body {
+      margin: 0 auto;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    #game {
+      margin: 10px auto;
+      padding: 0;
+      width: 800px;
+      height: 640px;
+    }
+  </style>
+</head>
+
 <body>
-<script type="text/javascript" src="phaser.js"></script>
-<script type="text/javascript" src="Scene.js"></script>
-<script type="text/javascript" src="Main.js"></script>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="game"></div>
+  <script src="//cdn.jsdelivr.net/npm/phaser@3.17.0/dist/phaser.min.js"></script>
+  <script src="game.js"></script>
 </body>
+
 </html>
